k8s/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-model-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokemon-model-deployment
  template:
    metadata:
      labels:
        app: pokemon-model-deployment
    spec:
      containers:
        - name: pokemon-app
          image: liupengfei99/pokemon-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
